syntax = "proto2";

message ActiveDisplay {
    required string pageName = 1;
}
