syntax = "proto2";
option csharp_namespace = "LtAmpDotNet.Lib.Models.Protobuf";

/*
 * Editing status of the current preset
 */
message PresetEditedStatus {
    // True if the preset is in editing state
    required bool presetEdited = 1 [default = false];
}
