syntax = "proto2";
option csharp_namespace = "LtAmpDotNet.Lib.Models.Protobuf";

/*
 * Clears a preset in the amp
 *
 * response: ClearPresetStatus message
 */
message ClearPreset {
    // Preset bank to clear
    required int32 slotIndex = 1;
    // ??? the Tone amp sets this to true when clearing the preset
    required bool isLoadPreset = 2;
}
