syntax = "proto2";
option csharp_namespace = "LtAmpDotNet.Lib.Models.Protobuf";

message CurrentLoadedPresetIndexBypassStatus {
    required int32 currentLoadedPresetIndex = 1;
    repeated bool bypassStatus = 2;
}
