syntax = "proto2";

// Heartbeat message sent every second to keep the connection alive
message Heartbeat {
    required bool dummyField = 1;
}
