syntax = "proto2";
option csharp_namespace = "LtAmpDotNet.Lib.Models.Protobuf";

message SavePresetAs {
    required string presetData = 1;
    required bool isLoadPreset = 2;
    required int32 presetSlot = 3;
}
